src/objects/IEC_Shopping_Cart__c.object
<CustomObject>
    <description>Represents a shopping cart containing Cart Items for IEC</description>
    <fields>
        <fullName>CartGuid__c</fullName>
        <description>GUID of the shopping cart that will be stored in the cookie</description>
        <inlineHelpText>GUID of the shopping cart</inlineHelpText>
        <label>CartGuid</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related Contact to the shopping cart</description>
        <label>Related Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>IEC Shopping Carts</relationshipLabel>
        <relationshipName>IEC_Shopping_Carts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Items_in_Cart__c</fullName>
        <description>Sums the amount of items in IEC Shopping Cart</description>
        <label>Total Items in Cart</label>
        <summarizedField>IEC_Cart_Item__c.Quantity__c</summarizedField>
        <summaryForeignKey>IEC_Cart_Item__c.Related_Shopping_Cart__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>IEC Shopping Cart</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Related_Contact__c</columns>
        <columns>CartGuid__c</columns>
        <columns>Total_Items_in_Cart__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>IEC-Cart{000000}</displayFormat>
        <label>IEC Shopping Cart Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IEC Shopping Carts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>